--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -30,20 +30,19 @@
       </block>
     </view>
     <view class="footer-account-box all-accounts-box">
-    <view class="all-select" bindtap="toggleSelectAll" data-status="{{selectedTypeCounts==cartData.length?'true':'false'}}">
-                <image wx:if="{{selectedTypeCounts==cartData.length}}"
-                       class="title-icon" src="../../imgs/icon/all@selected.png"></image>
-                <image wx:else class="title-icon" src="../../imgs/icon/all.png"></image>
-                <text>全选({{selectedCounts}})</text>
-            </view>
-            <view class="all-price-submit {{account==0?'disabled':''}}" bindtap="submitOrder">
-                <view class="accounts-btn">下单</view>
-                <view class="price-text">￥{{account}}</view>
-                <view class="arrow-icon">
-                    <image wx:if="{{account==0}}" src="../../imgs/icon/arrow@grey.png"></image>
-                    <image wx:else src="../../imgs/icon/arrow.png"></image>
-                </view>
-            </view>
+      <view class="all-select" bindtap="toggleSelectAll" data-status="{{selectedTypeCounts==cartData.length?'true':'false'}}">
+        <image wx:if="{{selectedTypeCounts==cartData.length}}" class="title-icon" src="../../imgs/icon/all@selected.png"></image>
+        <image wx:else class="title-icon" src="../../imgs/icon/all.png"></image>
+        <text>全选({{selectedCounts}})</text>
+      </view>
+      <view class="all-price-submit {{account==0?'disabled':''}}" bindtap="submitOrder">
+        <view class="accounts-btn">下单</view>
+        <view class="price-text">￥{{account}}</view>
+        <view class="arrow-icon">
+          <image wx:if="{{account==0}}" src="../../imgs/icon/arrow@grey.png"></image>
+          <image wx:else src="../../imgs/icon/arrow.png"></image>
+        </view>
+      </view>
     </view>
   </block>
   <view wx:else class="no-data">
