--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,19 +1,16 @@
 <!--pages/category/category.wxml-->
-<import src='../tpls/category/category-tpl.wxml'/>
+<import src='../tpls/category/category-tpl.wxml' />
 
 <view class="container category-container">
   <view class="category-box">
     <view class="left-box">
       <block wx:for="{{categoryTypeArr}}">
-        <view class="menu-item {{currentMenuIndex == index?'selected':''}}" 
-        data-id="{{item.id}}" 
-        data-index="{{index}}" 
-        bindtap="changeCategory">{{item.name}}</view>
+        <view class="menu-item {{currentMenuIndex == index?'selected':''}}" data-id="{{item.id}}" data-index="{{index}}" bindtap="changeCategory">{{item.name}}</view>
       </block>
     </view>
     <view class="right-box">
       <view class="foods-type-box">
-        <template is="categorydetail" data="{{categoryInfo:categoryProducts}}"></template>  
+        <template is="categorydetail" data="{{categoryInfo:categoryProducts}}"></template>
       </view>
     </view>
   </view>
